# pachanga-cr-llm-api

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  test_structured_output.py
src/: app.py  config.py  feedback.py  redis_store.py  router.py
src/ai_game_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/games/: couple_mode.py  party_mode.py  trivia_mode.py
src/prompts/: base.py
src/schemas/: base.py  couple.py  party.py  trivia.py
src/utils/: llm.py  retry.py
tests/: test_router.py  test_schemas.py
